# internal/controller/rest/docs/swagger.json
@@ -571,6 +571,74 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "description": "Updates a player's quest progression",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Update Player Quest Progression",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Game ID responsible for the quest",
+                        "name": "X-Game-ID",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Quest ID",
+                        "name": "questId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Player ID",
+                        "name": "playerId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Player data to check",
+                        "name": "ProgressData",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/rest.UpdatePlayerQuestProgressionReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/rest.PlayerQuestProgression"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ErrorResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/api/v1/statistics": {
@@ -1320,6 +1388,15 @@
                 },
                 "updatedAt": {
                     "description": "Last time that the task was updated",
+                    "type": "string"
+                }
+            }
+        },
+        "rest.UpdatePlayerQuestProgressionReq": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "description": "Data to apply the JsonLogic",
                     "type": "string"
                 }
             }
